--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "cross-fetch": "^3.1.6",
     "express": "^4.18.2"
   },
   "devDependencies": {
